# scenarioforge-eval

./: .gitignore  README.md  main.py  pyproject.toml  test.spec.yaml
.agents/skills/eval-architecture/: SKILL.md
scenarioforge_eval/: executor.py  main.py  metrics.py  parser.py  reporter.py  schema.json
test_specs/: 00-sanity-check.spec.yaml  01-basic-star.spec.yaml  01-minimal-host-only.spec.yaml  02-high-vuln-tree.spec.yaml  02-router-count-only.spec.yaml  03-no-vulns-mesh.spec.yaml  03-routed-host-baseline.spec.yaml  04-deterministic-ssh-services.spec.yaml  04-random-vulns.spec.yaml  05-many-routers.spec.yaml  05-mixed-safe-services.spec.yaml  06-only-hosts.spec.yaml  06-single-vulnerability.spec.yaml  07-single-router.spec.yaml  07-unique-flow-chain.spec.yaml  08-duplicate-flow-chain.spec.yaml  08-massive-randomness.spec.yaml  09-integrated-services-flow.spec.yaml  09-no-random-services.spec.yaml  10-bounded-randomized-stress.spec.yaml  10-no-random-flows.spec.yaml  11-30-permutations.spec.yaml  12-flag-seq-sanity.spec.yaml
tests/: test_executor_cli_pipeline.py  test_main_cli.py  test_reporter.py  test_service_spec_handling.py
