[project]
name = "scenarioforge-eval"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.1.0",
    "cryptography>=48.0.0",
    "flask==3.1.3",
    "jsonschema>=4.21.1",
    "lxml==6.1.1",
    "mako>=1.3.5",
    "markdown>=3.6",
    "mcp==1.25.0",
    "paramiko>=5.0.0",
    "proxmoxer>=2.0.1",
    "psutil==5.9.8",
    "pyyaml==6.0.2",
    "requests>=2.31.0",
    "werkzeug==3.1.8",
]
